--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-nfl-logos",
   "version": "1.0.3",
   "description": "React components for NFL team logos",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist",
